[package]
name = "ezio_qqbot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
serde = {version = "1.0.150",features=["derive"]}
serde_json = "1.0.89"
proc_qq = "0.1.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
[dependencies.reqwest]
version = "0.11.13"
default-features = false
features=["rustls-tls","json","multipart"]

[dependencies.tokio]
version = "1.23.0"
features=["full"]


